k8s/service/minio.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: databases
  labels:
    app: minio
spec:
  serviceName: minio
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:latest
        args:
        - server
        - /data/minio
        - "--console-address"
        - ":9001"
        - "--address"
        - ":9000"
        ports:
        - containerPort: 9000
        - containerPort: 9001
        volumeMounts:
        - name: minio-storage
          mountPath: /data/minio
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: minio-storage
        persistentVolumeClaim:
          claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: databases
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      name: api
      port: 9000
      targetPort: 9000
    - protocol: TCP
      name: ui
      port: 9001
      targetPort: 9001
  type: ClusterIP
